wtmp: Fix logout times in login-history

Logout times for users are correct if user logs off and then shutdown
from GDM, however logout times are wrong if user shutdowns directly
from the user session, because DEAD_PROCESS record is missing in that
case and BOOT_TIME record is used instead.

Wtmp contains also shutdown/reboot records. Set logout time to the
time from those record instead of BOOT_TIME.

https://bugs.freedesktop.org/show_bug.cgi?id=94497